# HPC

./: README.md  commands.txt  m1.txt  matrix.c
grayScale/: transImage.sh
grayscale/: transImage.cu  transImage.sh
homework1/: m1.txt  m2.txt  matrix.c
homework2/: generate.c  matrix.c  matrix.sh  matrixOpenMP.c
homework3/: cudaMatrix.cu  homework.txt
homework4/: CMakeLists.txt  openCVtutorial.txt  stepbystep.txt  transImage.cu
openCV/: CMakeLists.txt  DisplayImage.cpp  transImage.cu
project1/: CMakeLists.txt  GpuvsCpuGraphs.xlsx  article.rar  bare_conf_compsoc.dvi  comparative_graphs.xlsx  convoGlobalMem.cu  convoGlobalMem.sh  imageconvolution.cu  memorias.docx
project1/constantmemory/: CMakeLists.txt  butterfly data.txt  car data.txt  cat data.txt  city data.txt  control data.txt  convoConstMem.cu  convoConstMem.sh  convoSharedMem.cu  convoSharedMem.sh  lizard data.txt  paisaje data.txt  planet data.txt  thunder data.txt  wood data.txt
project1/cpuVsGpu/: butterfly data.txt  car data.txt  cat data.txt  city data.txt  control data.txt  convoGlobalMem.cu  convoGlobalMem.sh  lizard data.txt  paisaje data.txt  planet data.txt  thunder data.txt  wood data.txt
project1/documentation/: GpuvsCpuGraphs.xlsx
project1/globalmemory/: butterfly data.txt  car data.txt  cat data.txt  city data.txt  control data.txt  convoGlobalMem.cu  convoGlobalMem.sh  lizard data.txt  paisaje data.txt  planet data.txt  thunder data.txt  wood data.txt
project2/: Paper Geometria.docx  giftwrapping.cpp  graham.cu  grahamScan.cpp
sharedmemory/: sharedMemory.cu  sharedMemory.sh
(+53 files in other folders)
