cmake_minimum_required(VERSION 2.8)
project( transImage )
find_package( OpenCV REQUIRED )
find_package( CUDA REQUIRED )
set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS}; -03 -arch=sm_52)
set(CUDA_USE_STATIC_CUDA_RUNTIME OFF)
include_directories(${OpenCV_INCLUDE_DIRS})
cuda_add_executable( transImage transImage.cu )
target_link_libraries( transImage ${OpenCV_LIBS} )
